added pagination to clients endpoint